improve readability fix error throw

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,15 @@
 iframe {
   display: none;
 }
+
+.red {
+  color: red;
+}
+
+.green {
+  color: green;
+}
+
+.blue {
+  color: blue;
+}
